--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
+    "@angular/cdk": "^13.3.8",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
@@ -26,7 +27,7 @@
     "http": "^0.0.1-security",
     "jquery": "^3.6.0",
     "ng2-search-filter": "^0.5.1",
-    "rxjs": "~7.5.0",
+    "rxjs": "^6.5.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
